[package]
name = "devu"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Simple game engine for Rust"
repository = "https://github.com/Celebro228/devu"
documentation = "https://docs.rs/devu"
keywords = ["gamedev", "webassembly", "3d", "graphics"]
categories = ["game-development", "graphics", "rendering"]
authors = ["Celebro228"]


# Зависимости
[dependencies]
three-d = "0.18.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.11.0"
parking_lot = "0.12.5"


# Режим для разработчиков
[profile.dev]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

# Режим для релиза
[profile.release]
lto = true
panic = "abort"
debug = false
opt-level = 3
overflow-checks = false
debug-assertions = false
incremental = false
rpath = false
codegen-units = 1
strip = true

[profile.release.package."*"]
opt-level = 3